--- a/core/templates/account/settings.html
+++ b/core/templates/account/settings.html
@@ -76,6 +76,14 @@
             </div>
             <i class="bi bi-lock"></i>
         </a>
+
+        <a href="/announcements/" class="list-group-item list-group-item-action d-flex align-items-center justify-content-between settings-row">
+            <div class="d-flex align-items-center gap-3">
+                <i class="bi bi-megaphone fs-5"></i>
+                <div class="fw-bold">الإعلانات</div>
+            </div>
+            <i class="bi bi-chevron-left"></i>
+        </a>
     </div>
   </div>
 </div>
